# Atelier_CMAKE

./: CMakeLists.txt  README.md
.github/workflow/: test.yaml
.github/workflows/: main.yml  tests.yml
include/: calculator.h
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  calculator.c
